--- a/rmb/rmb-amb/src/main/javascript/index.html
+++ b/rmb/rmb-amb/src/main/javascript/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+<script src="trap-full.js"></script>
+<script src="tmb-trap.js"></script>
 <script src="amb-tmb.js"></script>
 <script src="rmb-amb.js"></script>
 <script>
-rmb = RMB.builder().seed("ws://127.0.0.1:4442").build();
+rmb = RMB.builder().seed("http://127.0.0.1:4442/_connectTrap").build();
 rmb.onopen = function() {
 	console.log("open");
 };
